--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -462,6 +462,7 @@
                                 [items]="kazPost"
                                 [searchFn]="customSearchFn"
                                 (search)="getDataKzPost($event)"
+                                [(ngModel)]="applicationForm.postcode"
                                 (ngModelChange)="checkPostData();"
                                 (clear)="'true'"
                                 formControlName="postcode"
