--- a/frontend/src/app/components/dic-control/dic-control.component.html
+++ b/frontend/src/app/components/dic-control/dic-control.component.html
@@ -308,6 +308,7 @@
             <label class="col-sm col-form-label">Город<span class="text-danger">&nbsp;*</span></label>
             <ng-select
               required="true"
+              disabled="true"
               bindValue="value"
               bindLabel="label"
               [items]="cities"
@@ -320,6 +321,7 @@
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Район</label>
             <ng-select
+              disabled="true"
               bindValue="value"
               bindLabel="label"
               [items]="districts"
@@ -329,6 +331,7 @@
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Улица<span class="text-danger">&nbsp;*</span></label>
             <ng-select
+              disabled="true"
               required="true"
               bindValue="value"
               bindLabel="label"
@@ -341,7 +344,7 @@
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Номер здания (дома)<span class="text-danger">&nbsp;*</span></label>
-            <input type="text"  maxlength="3"  min="1" oninput="this.value=this.value.replace(/[^0-9]/g,'');"
+            <input type="text"   disabled="true"
                    value=${var} class="col-sm form-control" name="houseNumber"   required="true"
                    [(ngModel)]="formRes.buildingDto.houseNumber">
             <div *ngIf="!formRes.buildingDto.houseNumber" class="text-danger">
