--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -436,6 +436,11 @@
                       <div class="row">
                         <fieldset class="scheduler-border col-sm">
                           <legend class="scheduler-border" translate>Унификация объекта</legend>
+                          <div class="row" *ngIf="!edit">
+                            <div class="col-sm">
+                              <input type="text" value="asd" class="form-control">
+                            </div>
+                          </div>
                           <div class="row">
                             <div class="col-sm">
                               <div class="row">
@@ -1342,10 +1347,10 @@
                                                                                aria-hidden="true"></i></button>
                                   </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#planCarousel" data-slide="prev">
+                                <a class="carousel-control-prev" href="#photoPlanList" data-slide="prev">
                                   <span class="carousel-control-prev-icon bg-dark"></span>
                                 </a>
-                                <a class="carousel-control-next" href="#planCarousel" data-slide="next">
+                                <a class="carousel-control-next" href="#photoPlanList" data-slide="next">
                                   <span class="carousel-control-next-icon bg-dark"></span>
                                 </a>
                               </div>
@@ -1372,10 +1377,10 @@
                                                                                aria-hidden="true"></i></button>
                                   </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#planCarousel" data-slide="prev">
+                                <a class="carousel-control-prev" href="#photo3DList" data-slide="prev">
                                   <span class="carousel-control-prev-icon bg-dark"></span>
                                 </a>
-                                <a class="carousel-control-next" href="#planCarousel" data-slide="next">
+                                <a class="carousel-control-next" href="#photo3DList" data-slide="next">
                                   <span class="carousel-control-next-icon bg-dark"></span>
                                 </a>
                               </div>
