--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1613,6 +1613,7 @@
       <ng-select
         [items]="kazPost2"
         [(ngModel)]="postcode2"
+        [searchFn]="customSearchFn"
         (search)="getDataKzPost2($event)"
         (ngModelChange)="checkPostData2();"
         (autocomplete)="'true'"
