--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -606,8 +606,8 @@
                                     placeholder="{{ 'claim.building' | translate }}">
                                   </ng-select>
                                 </div>
-                                <div class="col-sm-2">
-                                  <a (click)="openModal(template,'residential-complexes');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
+                                <div class="col-sm-2 left" >
+                                  <a (click)="openModal(template,'residentialComplexes');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
                                 </div>
                               </div>
 
