--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -488,7 +488,7 @@
                                     placeholder="{{ 'claim.building' | translate }}">
                                   </ng-select>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-2 marginleft">
                                   <a (click)="openModal(template,'residentialComplexes');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
                                 </div>
                               </div>
@@ -562,7 +562,7 @@
                                     placeholder="{{ 'claim.city' | translate }}">
                                   </ng-select>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-2 marginleft">
                                   <a (click)="openModal(template,'City');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
                                 </div>
                               </div>
@@ -589,7 +589,7 @@
                                     placeholder="{{ 'claim.street' | translate }}">
                                   </ng-select>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-2 marginleft">
                                   <a (click)="openModal(template,'Street');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
                                 </div>
                               </div>
@@ -1005,7 +1005,7 @@
                                           placeholder="{{ 'claim.validator.districtId' | translate }}">
                                         </ng-select>
                                       </div>
-                                      <div class="col-sm-2">
+                                      <div class="col-sm-2 marginleft">
                                         <a (click)="openModal(template,'District');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
                                       </div>
                                     </div>
@@ -1247,7 +1247,7 @@
                                           placeholder="{{ 'claim.parking' | translate }}">
                                         </ng-select>
                                       </div>
-                                      <div class="col-sm-2">
+                                      <div class="col-sm-2 marginleft">
                                         <a (click)="openModal(template,'ParkingType');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
                                       </div>
                                     </div>
